--- a/econ230b/hw/ps5/hw8_9.Rmd
+++ b/econ230b/hw/ps5/hw8_9.Rmd
@@ -51,10 +51,10 @@ One way is to drive straight across town, through the heart of Middle Potato. Th
 
 a) With the road at its current size and with no tolls, how many commuters will use the road through Middle Potato? What will be the total number of minutes per morning spent by all commuters going from East Potato to West Potato?
 
-    * Commuters will decide which road to take based on their utility, which without additional information, we assume is directly related to how long it takes to get to West Potato, or WePo. Equilibrium will occur when the WePo commute time (i.e. utility) on the Beltway, or BF, is the same as the time it takes to drive through Middle Potato, or MoPo.
+    * Commuters will decide which road to take based on their utility, which without additional information, we assume is directly related to how long it takes to get to West Potato, or WePo. Equilibrium will occur when the WePo commute time (i.e. disutility) on the Beltway, or BF, is the same as the time it takes to drive through Middle Potato, or MoPo.
 \begin{align*}
   U_{i,BF} &= U_{i,MoPo} &\text{(at equilibrium)}\\
-  45 &= 20 + \frac{x}{100}\\
+  -45 &= -(20 + \frac{x}{100})\\
   \Rightarrow x &= (45 - 20) * 100  = 2500 
 \end{align*}
     * Once 2500 drivers have chosen the MoPo route, the two commute times will be equal and commuters will be indifferent between the two routes; if any more were to consider this route, then it would take longer and therefore they would opt to take the BF route.
@@ -62,11 +62,11 @@ a) With the road at its current size and with no tolls, how many commuters will 
 
 b) Suppose that a social planner controlled access to the road through Middle Potato and chose the number of commuters who were allowed to use the Middle Potato road in such a way as to minimize the sum of the number of minutes spent by commuters traveling from East Potato to West Potato. How many commuters would the social planner permit to use the Middle Potato road each morning? How long would it then take the commuters who used this road to make their morning commute?
 
-    * The social planner will minimize the total commuting time (i.e. utility), dividing commuters into $x$ taking the MoPo route and $(6000 - x)$ taking the BF route:
+    * The social planner will minimize the total commuting time (i.e. maximize utility), dividing commuters into $x$ taking the MoPo route and $(6000 - x)$ taking the BF route:
 \begin{align*}
-  U = \sum U_i &= \sum_{i-1}^{x} (20 + \frac{x}{100}) + \sum_{i=x+1}^{6000} 45\\
-    &= 20x + \frac{x^2}{100} + 45 (6000 - x)\\
-  \frac{\dd U}{\dd x} &= -25 + \frac{x}{50} = 0 &\text{(first order cond'ns)}\\
+  U_{tot} = \sum U_i &= \sum_{i-1}^{x} -(20 + \frac{x}{100}) + \sum_{i=x+1}^{6000} -45\\
+    &= -20x - \frac{x^2}{100} - 45 (6000 - x)\\
+  \frac{\dd U_{tot}}{\dd x} &= 25 - \frac{x}{50} = 0 &\text{(first order cond'ns)}\\
   \Rightarrow x &= 1250
 \end{align*}
     * The commute for drivers taking the BF route will still take 45 minutes; the commute for drivers assigned to take the MoPo will take only $20 + x/100 = 32.5$ minutes.
@@ -77,11 +77,11 @@ commuter than they were in the equilibrium with no tolls?
 
     * The toll should be set such that the marginal commuter is indifferent between the BF route and MoPo route at the time-minimizing levels, to ensure equilibrium.
 \begin{align*}
-  U_{BF}   &= 45w + \frac{tx}{6000} 
-    &\text{(time value plus rebate)}\\
-  U_{MoPo} &= (20 + \frac{x}{100})w - t + \frac{tx}{6000}
-    &\text{(time value minus tax plus rebate)}\\
-  \Rightarrow 45w + \frac{tx}{6000} &= 20w + \frac{wx}{100} - t + \frac{tx}{6000}\\
+  U_{BF}   &= -45w + \frac{tx}{6000} 
+    &\text{(time disutility plus rebate)}\\
+  U_{MoPo} &= -(20 + \frac{x}{100})w - t + \frac{tx}{6000}
+    &\text{(time disutility minus tax plus rebate)}\\
+  \Rightarrow -45w + \frac{tx}{6000} &= -20w - \frac{wx}{100} - t + \frac{tx}{6000}\\
   \Rightarrow t &= (25 - \frac{x}{100})w\\
     &= 12.5w &\text{(substitute $x = 1250$)}
 \end{align*}
@@ -94,14 +94,24 @@ What price will the monopolist set and how many people will use the road at this
 
 > __Hint__: _First find the "demand curve” relating number of users to price. Then find the revenue-maximizing quantity and price._
 
-* Demand for access to the MoPo route is based on the price of the toll; demand will be at equilibrium when marginal utility for commuter $i$ are equal: $U_{i,BF} = U_{i,MoPo}$.
+* Demand for access to the MoPo route is based on the price of the toll; demand will be at equilibrium when utility for commuter $i$ are equal: $U_{i,BF} = U_{i,MoPo}$.
 
 \begin{align*}
-  t &= (25 - \frac{x}{100})w &\text{(as in 8.1c)}\\
-  \Rightarrow x &= 2500 - wt
+  U_{BF}   &= -45w 
+    &\text{(time disutility only)}\\
+  U_{MoPo} &= -(20 + \frac{x}{100})w - t
+    &\text{(time disutility minus toll)}\\
+  \Rightarrow t &= (25 - \frac{x}{100})w &\text{(same as 8.1c)}\\
+  \Rightarrow x &= 2500 - 100\frac{t}{w}
 \end{align*}
-* Total revenue is then $R = xt = 2500t - wt^2$.  Therefore, marginal revenue = 0 when $t = 12.5w$, and $x = 1250$ commuters on the MoPo route.
-* This is identical to the toll and number of MoPo commuters in the tax situation (8.1c).  This makes sense in this case, since revenue is directly related to the number of travel minutes saved.  The tax at $12.5w$ maximized savings of travel minutes, therefore maximizing revenue to the government; the monopolist will essentially take the government's role and in maximizing revenue will set the same toll at $t = 12.5w$.
+    * Total revenue is then $R = xt = 2500t - \frac{100}{w}t^2$. 
+
+\begin{align*}
+  \frac{\dd R}{\dd t} &= 2500 - \frac{200}{w}t = 0\\
+  \Rightarrow t &= 12.5w
+\end{align*}
+    * Therefore, marginal revenue = 0 when $t = 12.5w$, and $x = 1250$ commuters on the MoPo route.  Profit to the monopolist = $\$15,625w$.
+* This is identical to the toll and number of MoPo commuters in the tax situation (8.1c).  A monopolist charging a profit-maximizing toll will reduce the traffic on the EPo/WePo commute system to minimize the total driving time across all commuters just as effectively as an optimal tax by the government (rebated or otherwise).
 
 
 ### 8.3 Suppose that the road through Middle Potato can be widened at a cost of $\$p$ per inch per day. 
