--- a/econ230b/hw/ps5/hw8_9.Rmd
+++ b/econ230b/hw/ps5/hw8_9.Rmd
@@ -51,7 +51,7 @@ One way is to drive straight across town, through the heart of Middle Potato. Th
 
 a) With the road at its current size and with no tolls, how many commuters will use the road through Middle Potato? What will be the total number of minutes per morning spent by all commuters going from East Potato to West Potato?
 
-    * Commuters will decide which road to take based on their utility, which without additional information, we assume is directly related to how long it takes to get to West Potato, or WePo. Equilibrium will occur when the WePo commute time (i.e. disutility) on the Beltway, or BF, is the same as the time it takes to drive through Middle Potato, or MoPo.
+    * Commuters will decide which road to take based on their utility, which without additional information, we assume is directly related to how long it takes to get to West Potato, or WePo. Equilibrium will occur when the marginal commuter's WePo commute time (i.e. disutility) on the Beltway, or BF, is the same as the time it takes to drive through Middle Potato, or MoPo.
 \begin{align*}
   U_{i,BF} &= U_{i,MoPo} &\text{(at equilibrium)}\\
   -45 &= -(20 + \frac{x}{100})\\
@@ -111,6 +111,8 @@ What price will the monopolist set and how many people will use the road at this
   \Rightarrow t &= 12.5w
 \end{align*}
     * Therefore, marginal revenue = 0 when $t = 12.5w$, and $x = 1250$ commuters on the MoPo route.  Profit to the monopolist = $\$15,625w$.
+    * Note this is also the point where price elasticity of demand is equal to 1, therefore maximizing revenue; for $dx = +1$, $dt/dx = -1/100w$:
+$$e_p = -\frac{dx/x}{dt/t} = -\frac{1/1250}{-\frac{w}{100}/12.50w} = 1$$
 * This is identical to the toll and number of MoPo commuters in the tax situation (8.1c).  A monopolist charging a profit-maximizing toll will reduce the traffic on the EPo/WePo commute system to minimize the total driving time across all commuters just as effectively as an optimal tax by the government (rebated or otherwise).
 
 
